fix #5 auto-run node server under vagrant using upstart

--- a/upstart/musiccodes.conf
+++ b/upstart/musiccodes.conf
@@ -5,10 +5,12 @@ console log
 
 chdir /vagrant/server
 
+setuid vagrant
 exec node server.js
 
 respawn 
 
-# respawn limit 10 5
+# vagrant
+start on vagrant-mounted
+# but see https://github.com/mitchellh/vagrant/issues/6074
 
-start on runlevel [345]
