--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "musiccodes prototype server",
   "dependencies": {
     "express": "^4.10.2",
-    "socket.io": "^1.3.7"
+    "socket.io": "^1.3.7",
+    "bower": "^1.3.1"
   }
 }
