--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "express": "^4.10.2",
     "socket.io": "^1.3.7",
-    "bower": "^1.3.1"
+    "bower": "^1.3.1",
+    "body-parser": "^1.15.0"
   }
 }
