--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,8 @@
     "express": "^4.10.2",
     "socket.io": "^1.3.7",
     "bower": "^1.3.1",
-    "body-parser": "^1.15.0"
+    "body-parser": "^1.15.0",
+    "dateformat": "^1.0.12",
+    "uuid": "^2.0.1"
   }
 }
