fix #14 settings/editor add author field and machine nickname; fix #15 allow recording of audio

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,10 @@ server/public/vendor/
 
 # experience files
 server/experiences/
+
+# local server settings
+server/installId
+server/settings.json
+
+# audio recordings
+server/audio/
