--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "bower": "^1.3.1",
     "body-parser": "^1.15.0",
     "dateformat": "^1.0.12",
-    "uuid": "^2.0.1"
+    "uuid": "^2.0.1",
+    "rdflib": "^0.6.0"
   }
 }
