--- a/server/bower.json
+++ b/server/bower.json
@@ -11,6 +11,7 @@
     "angular-route": "1.5.x",
     "angular-resource": "1.5.x",
     "angular-animate": "1.5.x",
-    "angular-bootstrap": "1.2.x"
+    "angular-bootstrap": "1.2.x",
+    "socket.io": "^1.4.6"
   }
 }
