--- a/server/package.json
+++ b/server/package.json
@@ -3,12 +3,13 @@
   "version": "0.0.1",
   "description": "musiccodes prototype server",
   "dependencies": {
-    "express": "^4.10.2",
-    "socket.io": "^1.3.7",
-    "bower": "^1.3.1",
     "body-parser": "^1.15.0",
+    "bower": "^1.3.1",
     "dateformat": "^1.0.12",
-    "uuid": "^2.0.1",
-    "rdflib": "^0.6.0"
+    "express": "^4.10.2",
+    "rdflib": "^0.6.0",
+    "request": "^2.72.0",
+    "socket.io": "^1.3.7",
+    "uuid": "^2.0.1"
   }
 }
