skeleton for testing using jasmine and karma with chrome

--- a/server/package.json
+++ b/server/package.json
@@ -11,5 +11,18 @@
     "request": "^2.72.0",
     "socket.io": "^1.3.7",
     "uuid": "^2.0.1"
+  },
+  "devDependencies": {
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.22",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-junit-reporter": "^1.0.0"
+  },
+  "scripts": {
+    "pretest": "npm install",
+    "test": "karma start karma.conf.js",
+    "test-single-run": "karma start karma.conf.js --single-run"
   }
 }
