--- a/server/bower.json
+++ b/server/bower.json
@@ -12,6 +12,7 @@
     "angular-resource": "1.5.x",
     "angular-animate": "1.5.x",
     "angular-bootstrap": "1.2.x",
-    "socket.io": "^1.4.6"
+    "socket.io": "^1.4.6",
+    "pegjs": "^0.9.0"
   }
 }
