--- a/server/package.json
+++ b/server/package.json
@@ -8,11 +8,13 @@
     "dateformat": "^1.0.12",
     "express": "^4.10.2",
     "extend": "^3.0.0",
+    "os-tmpdir": "^1.0.2",
     "osc": "^2.1.0",
     "rdflib": "^0.6.0",
     "request": "^2.72.0",
     "socket.io": "^1.3.7",
-    "uuid": "^2.0.1"
+    "socket.io-client": "^1.7.3",
+    "uuid": "^3.0.1"
   },
   "devDependencies": {
     "jasmine-core": "^2.4.1",
