--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,11 @@
     "os-tmpdir": "^1.0.2",
     "osc": "^2.1.0",
     "rdflib": "^0.6.0",
+    "redis": "^2.7.1",
     "request": "^2.72.0",
     "socket.io": "^1.3.7",
     "socket.io-client": "^1.7.3",
+    "socket.io-redis": "^4.0.0",
     "uuid": "^3.0.1"
   },
   "devDependencies": {
