--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,10 @@
   "description": "musiccodes prototype server",
   "dependencies": {
     "body-parser": "^1.15.0",
-    "bower": "^1.3.1",
     "dateformat": "^1.0.12",
     "express": "^4.10.2",
     "extend": "^3.0.0",
     "os-tmpdir": "^1.0.2",
-    "osc": "^2.1.0",
     "rdflib": "^0.6.0",
     "redis": "^2.7.1",
     "request": "^2.81.0",
@@ -19,13 +17,15 @@
     "uuid": "^3.0.1"
   },
   "devDependencies": {
+    "bower": "^1.3.1",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^1.0.1",
     "karma-firefox-launcher": "^1.0.0",
     "karma-jasmine": "^1.0.2",
     "karma-junit-reporter": "^1.0.0",
-    "pegjs": "^0.9.0"
+    "pegjs": "^0.9.0",
+    "osc": "^2.1.0"
   },
   "scripts": {
     "pretest": "npm install --no-bin-links",
