--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,9 @@
     "socket.io": "^1.3.7",
     "socket.io-client": "^1.7.3",
     "socket.io-redis": "^4.0.0",
-    "uuid": "^3.0.1"
+    "uuid": "^3.0.1",
+    "osc": "^2.3.1",
+    "@serialport/bindings": "^2.0.8"
   },
   "devDependencies": {
     "bower": "^1.3.1",
@@ -24,8 +26,7 @@
     "karma-firefox-launcher": "^1.0.0",
     "karma-jasmine": "^1.0.2",
     "karma-junit-reporter": "^1.0.0",
-    "pegjs": "^0.9.0",
-    "osc": "^2.1.0"
+    "pegjs": "^0.9.0"
   },
   "scripts": {
     "pretest": "npm install --no-bin-links",
